--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
     </p>
 
     <div class="slideshow">
-      <img src="photo_2025-07-11_15-58-59-removebg-preview.png" class="active" alt="Оля 1">
-      <img src="photo_2025-07-11_15-59-07-removebg-preview.png" alt="Оля 2">
-      <img src="photo_2025-07-11_15-59-12-removebg-preview.png" alt="Оля 3">
+      <img src="photo_2025-07-11_15-58-59.jpg" class="active" alt="Оля 1">
+      <img src="photo_2025-07-11_15-59-07.jpg" alt="Оля 2">
+      <img src="photo_2025-07-11_15-59-12.jpg" alt="Оля 3">
     </div>
   </section>
 
