--- a/index.html
+++ b/index.html
@@ -120,10 +120,15 @@
       line-height: 1.6;
     }
 
+    .slideshow-section {
+      background: var(--peach);
+      padding: 30px 0;
+    }
+
     .slideshow {
       position: relative;
       width: 300px;
-      margin: 40px auto;
+      margin: 0 auto;
       height: 400px;
     }
 
@@ -232,6 +237,9 @@
       У своїй роботі я поєдную любов до мови, сучасні методики та дружню атмосферу.  
       Зі мною навчання — це цікаво, ефективно та з посмішкою! 😊
     </p>
+  </section>
+
+  <section class="slideshow-section">
     <div class="slideshow">
       <img src="photo_2025-07-11_15-58-59.jpg" class="active" alt="Оля 1">
       <img src="photo_2025-07-11_15-59-07.jpg" alt="Оля 2">
@@ -291,4 +299,3 @@
 
 </body>
 </html>
-
